# cookiecutter_research

./: .gitignore  .pre-commit-config.yaml.jinja  Dockerfile.jinja  LICENSE.jinja  README.md  README.md.jinja  _copier_tasks.py  cookiecutter.json  copier.yaml  pyproject.toml.jinja  ruff.toml
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: example.py.jinja
src/{{project_slug}}/: __init__.py.jinja  broken_utils.py  utils.py
tests/: test_broken_utils.py.jinja  test_utils.py.jinja
{{cookiecutter.project_slug}}/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/envs/: Dockerfile  environment.yaml  requirements.txt
{{cookiecutter.project_slug}}/notebooks/: Demo.ipynb
{{cookiecutter.project_slug}}/scripts/: example.py
{{cookiecutter.project_slug}}/scripts/config/: main.yaml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  utils.py
{{cookiecutter.project_slug}}/tests/: test_utils.py
{{project_slug}}/: README.md.jinja  pyproject.toml.jinja
