[metadata]
name = {{cookiecutter.project_slug}}
version = file: src/{{cookiecutter.project_slug}}/VERSION
description = {{cookiecutter.project_short_description}}
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
maintainers =
    {{cookiecutter.full_name}}
project_urls =

[options]
package_dir =
    = src
packages = find:
platforms = any
include_package_data = True
zip_safe = False
python_requires = >=3.10

[options.packages.find]
where = src
